gitea-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  namespace: gitea
  labels:
    app: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
      - name: minio
        image: minio/minio:RELEASE.2021-03-17T02-33-02Z
        args:
          - 'server'
          - '/data'
        ports:
          - containerPort: 9000
        volumeMounts:
          - mountPath: '/data'
            name: minio-pv
      volumes:
        - name: minio-pv
          persistentVolumeClaim:
            claimName: minio-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: minio
  namespace: gitea
spec:
  selector:
    app: minio
  ports:
    - protocol: TCP
      port: 9000
      targetPort: 9000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-stateful
  namespace: gitea
  labels:
    app: redis-stateful
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-stateful
  template:
    metadata:
      labels:
        app: redis-stateful
    spec:
      containers:
      - name: redis-stateful
        image: redis:6
        args:
          - 'redis-server'
          - '--requirepass'
          - '$(REDIS_PASSWORD)'
          - '--appendonly'
          - 'yes'
        ports:
          - containerPort: 6379
        volumeMounts:
          - mountPath: '/data'
            name: redis-pv
      volumes:
        - name: redis-pv
          persistentVolumeClaim:
            claimName: redis-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: redis-stateful
  namespace: gitea
spec:
  selector:
    app: redis-stateful
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-stateless
  namespace: gitea
  labels:
    app: redis-stateless
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-stateless
  template:
    metadata:
      labels:
        app: redis-stateless
    spec:
      containers:
      - name: redis-stateless
        image: redis:6
        args:
          - 'redis-server'
          - '--requirepass'
          - '$(REDIS_PASSWORD)'
        ports:
          - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-stateless
  namespace: gitea
spec:
  selector:
    app: redis-stateless
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
#-- ---
#-- apiVersion: apps/v1
#-- kind: Deployment
#-- metadata:
#--   name: elastic
#--   namespace: gitea
#--   labels:
#--     app: elastic
#-- spec:
#--   replicas: 1
#--   selector:
#--     matchLabels:
#--       app: elastic
#--   template:
#--     metadata:
#--       labels:
#--         app: elastic
#--     spec:
#--       initContainers:
#--       - name: set-vm-sync-limit
#--         image: busybox
#--         imagePullPolicy: IfNotPresent
#--         command: ["sysctl", "-w", "vm.max_map_count=262144"]
#--         securityContext:
#--           privileged: true
#--       containers:
#--       - name: elastic
#--         image: elasticsearch:7.11.2
#--         env:
#--           - name: discovery.type
#--             value: single-node
#--         ports:
#--           - containerPort: 9200
#-- ---
#-- apiVersion: v1
#-- kind: Service
#-- metadata:
#--   name: elastic
#-- spec:
#--   selector:
#--     app: elastic
#--   ports:
#--     - protocol: TCP
#--       port: 9200
#--       targetPort: 9200
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres
  namespace: gitea
  labels:
    app: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:13
        ports:
          - containerPort: 5432
        volumeMounts:
          - mountPath: '/var/lib/postgresql/data'
            name: postgres-pv
      volumes:
        - name: postgres-pv
          persistentVolumeClaim:
            claimName: postgres-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: gitea
spec:
  selector:
    app: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
  namespace: gitea
  labels:
    app: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitea
  template:
    metadata:
      labels:
        app: gitea
    spec:
      containers:
      - name: gitea
        image: gitea/gitea:1.14
        command:
          - '/bin/bash'
          - '/entrypoint.sh'
        ports:
          - containerPort: 3000
          - containerPort: 22
        volumeMounts:
          - name: gitea-pv
            mountPath: '/data'
          - name: gitea-ssh-pv
            mountPath: '/root/.ssh'
          - name: gitea-config
            mountPath: '/entrypoint.sh'
            subPath: entrypoint.sh
          - name: gitea-config
            mountPath: '/tmp/_backup.sh'
            subPath: _backup.sh
      volumes:
        - name: gitea-pv
          persistentVolumeClaim:
            claimName: gitea-pvc
        - name: gitea-ssh-pv
          persistentVolumeClaim:
            claimName: gitea-ssh-pvc
        - name: gitea-config
          configMap:
            name: gitea-config
---
apiVersion: v1
kind: Service
metadata:
  name: gitea-http
  namespace: gitea
spec:
  selector:
    app: gitea
  ports:
    - name: http
      protocol: TCP
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: gitea-ssh
  namespace: gitea
spec:
  type: NodePort
  selector:
    app: gitea
  ports:
    - name: ssh
      protocol: TCP
      port: 22
      nodePort: 32222
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gitea
  namespace: gitea
spec:
  rules:
  - host: code.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitea-http
            port:
              number: 3000
